refactor: 런타임에 외부 PG사 호출 선택이 아닌 유지보수성 측면에서 갈아끼기 쉬운 형태로 변경